
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "ninam"
version = "1.0.1"
authors = [
  { name="Sacha Schutz", email="sacha.schutz@pm.me" },
]
description = "A steganography tool for hiding a secret message in text using different unicode spaces"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/dridk/ninam"
Issues = "https://github.com/dridk/ninam/issues"

[project.scripts]
ninam = "ninam.__main__:main_cli"
